# paystack-wallet-to-wallet-service

./: .dockerignore  .env.example  Dockerfile  debug_key.py  docker-compose.yml  leapcell.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  main.py
app/api/: __init__.py  api_keys.py  auth.py  deps.py  wallet.py
app/core/: redis.py
app/db/: __init__.py  base.py  session.py
app/middleware/: correlation.py  security.py
app/models/: __init__.py  refresh_token.py  transaction.py  user.py
app/schemas/: __init__.py  api_key.py  auth.py  wallet.py
app/services/: api_key.py  auth.py  deposit.py  paystack.py  wallet.py  webhook.py
app/utils/: rate_limit.py
nginx/: nginx.conf
